--- a/index.html
+++ b/index.html
@@ -31,7 +31,17 @@
     // 🧠 There are many ways to solve this, but practice using a for loop to iterate over the array.
     // 🧠 As you have done in the past, declare a variable before you start looping, to accumulate the result.
     function sumNumsFor(nums) {
-
+      let total = 0;
+      for (let i = 0; i < nums.length; i++) {
+        if (typeof nums[i] === 'number') {
+          if (nums[i] ===13) {
+            return "I'm too superstitious!";
+          } else {
+            total += nums[i];
+          }
+        }
+      }
+      return total;
     }
 
     // 👉 CHALLENGE 2
@@ -41,7 +51,15 @@
     // ❗ Notes:
     // 🧠 There are many ways to solve this, but practice using a for loop to iterate over the characters of the string.
     function stripVowels(str) {
-
+      let result = '';
+      for (let i = 0; i < str.length; i++) {
+        const char = str[i];
+        if ('aeiou'.includes(char)) {
+          continue;
+        }
+       result += char;
+      }
+      return result;
     }
 
     // 👉 CHALLENGE 3
@@ -49,8 +67,20 @@
     // 🧠 Examples of usage:
     // sumNumsWhile([1, 2, 3]) // should return 6
     // sumNumsWhile([1, 2, 13]) // should return "I'm too superstitious!"
-    function sumNumsWhile() {
-
+    function sumNumsWhile(nums) {
+      let total = 0;
+      let i = 0;
+      while (i < nums.length) {
+        if (typeof nums[i] === 'number') {
+          if (nums[i] === 13) {
+            return "I'm too superstitious!";
+          } else {
+            total += nums[i];
+          }
+        }
+        i++;
+      }
+      return total;
     }
 
     // 👉 CHALLENGE 4
@@ -70,7 +100,15 @@
     // 🧠 There are many ways to solve this, but practice using a while loop.
     // 🧠 Work out using pen and paper how the round number and the lifePoints change after each round.
     // 🧠 As long as there are lifePoints, decrease lifePoints by round number, and increase round number by one.
-    function fightMonsters() {
+    function fightMonsters(lifePoints) {
+      let round = 1;
+      while (lifePoints > 0) {
+        lifePoints -= round;
+        if (lifePoints <= 0) {
+          return `You died in round ${round}`;
+        }
+        round++;
+      }
 
     }
 
@@ -81,8 +119,14 @@
     // findEvenNums([0, 1, 2, 3, 4]) // should return [0, 2, 4]
     // ❗ Notes:
     // 🧠 Use any kind of loop you'd like and the push method to populate the array of even numbers.
-    function findEvenNums() {
-
+    function findEvenNums(arr) {
+      let evenNumbers = [];
+      for (let i = 0; i < arr.length; i++) {
+        if (arr[i] % 2 === 0) {
+        evenNumbers.push(arr[i]);
+        }
+      }
+      return evenNumbers;
     }
 
     // 👉 CHALLENGE 6
@@ -92,8 +136,17 @@
     // 🧠 Ages in the subarrays should appear in the same order they appeared in the original array.
     // 🧠 Examples of usage:
     // separateAges([31, 12, 25, 65, 84, 20]) // should return [[12, 20], [31, 25, 65, 84]]
-    function separateAges() {
-
+    function separateAges(ages) {
+      let under21 = [];
+      let equalOrOlder21 = [];
+      for (let i = 0; i < ages.length; i++) {
+        if (ages[i] < 21) {
+          under21.push(ages[i]);
+        } else {
+          equalOrOlder21.push(ages[i]);
+        }
+      }
+      return [under21, equalOrOlder21];
     }
 
     // 👉 CHALLENGE 7
@@ -103,7 +156,13 @@
     // 🧠 The "tail" prop contains an array holding the elements of the array after the first one.
     // 🧠 Examples of usage:
     // headAndTail([1, 2, 3]) // should return { head: 1, tail: [2, 3] }
-    function headAndTail() {
+    function headAndTail(arr) {
+      if (arr.length === 0) {
+        return {head: undefined, tail: [] };
+      } else {
+        const [head, ...tail] = arr;
+        return { head, tail };
+      }
 
     }
 
@@ -114,8 +173,20 @@
     // nestedLoops(['hello', 'goodbye']) // should return ['hEllO', 'gOOdbyE']
     // ❗ Notes:
     // 🧠 To capitalize a string you can use its toUpperCase method: "a".toUpperCase() returns "A"
-    function nestedLoops() {
-
+    function nestedLoops(strings) {
+      let result = [];
+      for (let i = 0; i < strings.length; i++) {
+        let modifiedString = '';
+      for (let j = 0; j < strings[i].length; j++) {
+        let char = strings[i][j];
+        if ('aeiouAEIOU'.includes(char)) {
+          char = char.toUpperCase();
+        }
+        modifiedString += char;
+      }
+      result.push(modifiedString);
+      }
+      return result;
     }
 
     // 👉 CHALLENGE 9
@@ -129,6 +200,12 @@
     // 🧠 Practice using pop and slice.
     // 🧠 Note that pop modifies the original array in place and returns the "popped" element, whereas slice gives us a brand new array.
     function crazyTrimmer(arr) {
+      if (arr.length % 2 === 0) {
+        arr.pop();
+      } else {
+        arr = arr.slice(1, arr.length - 1);
+      }
+      return arr;
 
     }
 
